WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60505
REGRESSION(
r86039
): DragCaretController doesn't draw caret
https://bugs.webkit.org/show_bug.cgi?id=60505
Summary
REGRESSION(r86039): DragCaretController doesn't draw caret
Ryosuke Niwa
Reported
2011-05-09 14:30:56 PDT
Apparently, an early exit added in
r86039
causes drag caret to be not drawn.
Attachments
reverts r86039 in setCaretPosition
(1.85 KB, patch)
2011-05-09 15:45 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-05-09 15:27:23 PDT
Since we *just* introduced this, I suggest rolling out the early exit quickly, then at leisure looking more deeply at the causes.
Ryosuke Niwa
Comment 2
2011-05-09 15:38:26 PDT
(In reply to
comment #1
)
> Since we *just* introduced this, I suggest rolling out the early exit quickly, then at leisure looking more deeply at the causes.
Definitely. I just wasted much time fighting with the
bug 60506
but I'll submit a patch shortly without a test.
Ryosuke Niwa
Comment 3
2011-05-09 15:45:04 PDT
Created
attachment 92870
[details]
reverts
r86039
in setCaretPosition
Ryosuke Niwa
Comment 4
2011-05-09 16:37:07 PDT
Comment on
attachment 92870
[details]
reverts
r86039
in setCaretPosition Clearing flags on attachment: 92870 Committed
r86104
: <
http://trac.webkit.org/changeset/86104
>
Ryosuke Niwa
Comment 5
2011-05-09 16:37:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug